[package]
name = "amir-mark-bot"
publish = false
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Discord bot for tracking Amir's marks"
readme = "README.md"
homepage = "https://github.com/ewpratten/amir-mark-bot"
repository = "https://github.com/ewpratten/amir-mark-bot"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "^0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    # "unstable_discord_api",
    "builder",
    "cache",
    "http",
    # "utils",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }